# distributed_ml

./: CITATION.CFF  CMakeLists.txt  Dockerfile  README.md  index.html  requirements.txt
dashboard/: dashboard_server.cpp
helm/distributed-ml/: Chart.yaml  values.yaml
helm/distributed-ml/templates/: deployment.yaml  hpa.yaml  service.yaml
include/: dashboard_server.h  distributed_trainer.h  performance_tracker.h  task_manager.h
k8s/: deployment.yaml  hpa.yaml
kubernetes/: deployment.yaml
monitoring/: prometheus.yaml
src/: distributed_trainer.cpp  main.cpp  performance_tracker.cpp  task_manager.cpp
src/core/: ml_model.cpp  ml_model.h
src/network/: distributed_trainer.cpp  distributed_trainer.h
src/utils/: data_loader.cpp
